--- a/src/components/sections/FestivalesSection.css
+++ b/src/components/sections/FestivalesSection.css
@@ -1,8 +1,16 @@
 #section-3 {
   background-color: #2f5075;
-  min-height: 120vh;
+  min-height: 125vh;
   display: flex;
   flex-direction: column;
+  margin-bottom: 2rem;
+}
+
+#section-3 h2 {
+  text-align: center;
+  font-family: "opensans bold";
+  font-size: 4.5rem;
+  margin-bottom: 2rem;
 }
 
 .festivales-header {
@@ -19,9 +27,9 @@
 
 .festivales-carousel__track-container {
   display: flex;
-  overflow: hidden;
   width: 90%;
   height: 100%;
+  transition: transform 0.5s ease;
 }
 
 .festivales-carousel__track {
@@ -29,12 +37,13 @@
   transition: transform 0.3s ease-in-out;
   list-style: none;
   padding: 0;
-  margin: 0;
   height: 100%;
   width: 100%;
 }
 
 .festivales-carousel__card {
+  display: flex;
+  flex-direction: column;
   min-width: calc(33% - 20px);
   height: 100%;
   margin: 0px 40px;
@@ -46,11 +55,14 @@
 
 .festivales-carousel__card img {
   width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .card-info {
   padding-top: 40px;
   padding-left: 40px;
+  padding-right: 40px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -66,7 +78,7 @@
   text-align: left;
 }
 
-.festivales-carousel__card .card-info button {
+.festivales-carousel__card button {
   color: #00b9da;
   background-color: white;
   padding: 10px;
@@ -74,6 +86,11 @@
   margin-top: 10px;
   border: 2px solid #00b9da;
   transition-duration: 0.2s;
+  font-family: "opensans regular";
+  font-size: 1rem;
+  height: 47px;
+  border-radius: 3.5px;
+  margin: 40px;
 }
 
 .festivales-carousel__card .card-info button:hover {
@@ -86,13 +103,13 @@
   background-color: #00000000;
   color: #fff;
   border: none;
-  cursor: pointer;
   height: 20px;
   z-index: 1;
 }
 
 .festivales-carousel__button:hover {
   background-color: #00000000;
+  cursor: pointer;
 }
 
 .festivales-carousel__indicators {
